# gimp-file-mdp-plugin

./: LICENSE  README.md  meson.build
src/: file-mdp-load.c  file-mdp-load.h  file-mdp-thumb-load.c  file-mdp-thumb-load.h  file-mdp.c  file-mdp.h  mdp-parse.c  mdp-parse.h  mdp-util.c  mdp-util.h  meson.build
src/res/: gimp-plug-ins.rc
